overflow x issue

--- a/style.css
+++ b/style.css
@@ -2,6 +2,8 @@ body {
     margin: 0;
     padding: 0;
     color: lightblue;
+    overflow-x: hidden;
+    overflow-y: scroll;
 }
 .top {
     background-color: rgb(20, 5, 73);
@@ -16,7 +18,6 @@ body {
 .bottom {
     background-color: lightblue;
     height: 85vh;
-    width: 100vw;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -119,7 +120,7 @@ body {
     width: 300px;
 }
 
-@media (width: 1200px) {
+@media (max-width: 500px) {
  .header {
      font-size: 20px;
  }
